k8-manifests/flippychart/templates/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deploy
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway-service
          image: rogerdhas/foodyapigateway
          imagePullPolicy: Always
          ports:
            - containerPort: 8765
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 8765
      targetPort: 8765
      nodePort: 30005
